# building-rag-pipeline

./: main.py  pyproject.toml  requirements.txt
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
faiss_store/: faiss_index  metadata.pkl
notebook/: document.ipynb  notebook.ipynb  typesense.ipynb
src/: app.py  dataLoader.py  embedding.py  search.py  vectorstore.py
