[project]
name = "building-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.78",
    "pymupdf>=1.26.4",
    "pypdf>=6.1.1",
    "ipykernel>=6.0.0",
]
