[project]
name = "building-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.78",
    "pymupdf>=1.26.4",
    "pypdf>=6.1.1",
    "ipykernel>=6.0.0",
    "sentence-transformers>=5.1.1",
    "faiss-cpu>=1.12.0",
    "chromadb>=1.1.1",
    "onnxruntime<1.19.0",
]
